--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "author": "Elie Rotenberg <elie@rotenberg.io>",
   "main": "es5/index.js",
+  "module": "src/index.jsx",
   "repository": {
     "type": "git",
     "url": "https://github.com/elierotenberg/lifespan.git"
@@ -15,29 +16,28 @@
   "homepage": "https://github.com/elierotenberg/lifespan",
   "scripts": {
     "test": "gulp test",
-	"build": "babel src -d es5"
+    "build": "babel src -d es5"
   },
   "devDependencies": {
-	"babel-core": "^6.4.0",
-	"babel-eslint": "^3.1.15",
-	"babel-plugin-syntax-async-functions": "^6.3.13",
-	"babel-plugin-transform-async-to-module-method": "^6.4.0",
-	"babel-plugin-transform-class-properties": "^6.4.0",
-	"babel-plugin-transform-object-assign": "^6.3.13",
-	"babel-preset-es2015": "^6.3.13",
-	"babel-preset-react": "^6.3.13",
-	"babel-register": "^6.3.13",
-	"babel-runtime": "^5.5.8",
-    "eslint": "^0.23.0",
-    "eslint-plugin-react": "^2.5.2",
+    "@babel/core": "next",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.4",
+    "@babel/plugin-proposal-object-rest-spread": "next",
+    "@babel/plugin-syntax-dynamic-import": "next",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.4",
+    "@babel/plugin-transform-flow-strip-types": "^7.0.0-beta.4",
+    "@babel/preset-env": "^7.0.0-beta.4",
+    "@babel/preset-es2015": "^7.0.0-beta.4",
+    "@babel/preset-react": "^7.0.0-beta.4",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-react": "^7.0.1",
     "gulp": "^3.9.0",
     "gulp-eslint": "^0.14.0",
     "gulp-mocha": "^2.1.1",
     "gulp-plumber": "^1.0.1"
   },
   "dependencies": {
-    "bluebird": "^2.9.30",
-    "lodash": "^3.9.3",
-    "should": "^6.0.3"
+    "lodash": "~4.14.0",
+    "should": "^13.1.3"
   }
 }
